@@ -1,6 +1,8 @@
 gcc-11 (11-20210116-2) UNRELEASED; urgency=medium
 
   * Explicitly use autoconf2.69 where necessary.
+  * Use the same breaks relations for libgcc-s2 and libgcc-s4 as for
+    libgcc-s1. Addresses: #980770.
 
  -- Matthias Klose <doko@debian.org>  Tue, 19 Jan 2021 11:00:25 +0100
 
